--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "lucide-react": "^0.341.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,11 +19,14 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
     "react-router-dom": "^6.22.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
 }
